# cppsafe

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  conanfile.txt.tpl  cppship.toml
.github/workflows/: ci-linux.yml  ci-macos-local.yml  ci-macos.yml
cmake/: conan.cmake
include/cppsafe/: AstConsumer.h  Options.h  options.h
include/cppsafe/lifetime/: Attr.h  Debug.h  Lifetime.h  LifetimeAttrData.h  LifetimePset.h  LifetimePsetBuilder.h  LifetimeTypeCategory.h
include/cppsafe/lifetime/contract/: Annotation.h  CallVisitor.h  Parser.h
include/cppsafe/lifetime/type/: Aggregate.h
include/cppsafe/util/: assert.h  pointer_variant.h  type.h
integration_test/: .clang-tidy  annotation_contract.cpp  contract_agg_expansion.cpp  debug_functions.cpp  example.cpp  pointer_lambda.cpp  run_tests.sh  test.sh  use-after-move-for-value.cpp
integration_test/annotation/: annotation_capture.cpp  annotation_contract.cpp  annotation_contract_legacy.cpp  annotation_lifetime_const.cpp  annotation_lifetime_inout.cpp  annotation_owner_and_pointer.cpp
integration_test/case/: cache_holder.cpp  cwe415-double-free.cpp  cwe416-use-after-free.cpp  cwe476-deref-null-strict.cpp  cwe476-deref-null.cpp  cwe562-return-stack-var-strict.cpp  cwe562-return-stack-var.cpp  cwe672-invalidated-iter.cpp  cwe672-lambda-escape.cpp  cwe675-pointer-to-multi-owner.cpp  cwe690-deref-returned-null.cpp  cwe762-bad-delete.cpp  cwe825-deref-expired-pointer.cpp  elements_view_cxx17.cpp  scoped_executor.cpp
integration_test/contract/: contract_agg_expansion.cpp  contract_dtor.cpp  contract_inout.cpp  contract_pointer_expansion.cpp  contract_template.cpp  expansion_complex_pointer.cpp  expansion_owner_as_member.cpp  output_parameter.cpp  overrides.cpp  pointer_lambda.cpp  pointer_nullness.cpp  reverse_iterator.cpp  std_types.cpp
integration_test/feature/: aggr_explosion.cpp  aggr_explosion_loop.cpp  aggr_move.cpp  assignment.cpp  builtin_addressof.cpp  builtin_file.cpp  call_invalidate.cpp  call_post.cpp  classtemplate_inst_wo_definition.cpp  common.h  init_list.cpp  macro.cpp  main.cpp  main2.cpp  main3.cpp  member_access_pointer.cpp  member_relation.cpp  move_container.cpp  move_container_disabled.cpp  naked_new_delete.cpp  null.cpp  null_assert.cpp  pointer_container.cpp  structureal_binding.cpp  suppress.cpp  temp.cpp
integration_test/hack/: output_variable.cpp
integration_test/inference/: expansion_complex_pointer.cpp  expansion_owner_as_member.cpp  output_parameter.cpp  pointer_ctor_from_nullptr.cpp  pointer_ctor_from_value.cpp  pointer_lambda.cpp  return_inner_owner.cpp
integration_test/legacy/: attr-psets-annotation.cpp  attr-psets.cpp  warn-lifetime-analysis.cpp
integration_test/move/: reset.cpp  use-after-move-for-value.cpp  use-after-move.cpp
integration_test/options/: no_contract_post.cpp  warn_contract_post.cpp  warn_delete.cpp  warn_delete_strict.cpp  warn_deref_null.cpp  warn_no_deref_null.cpp  warn_null.cpp  warn_null_call.cpp  warn_output.cpp  warn_output_relax.cpp  warn_pointer_arithmetic.cpp  warn_pset_global.cpp  warn_unsafe_cast.cpp
integration_test/safety/: call_post_null.cpp  cfg.cpp  contract_param_aggr.cpp  contract_param_aggr_strict.cpp  contract_param_pointer.cpp  contract_return.cpp  contract_return_aggr.cpp  local_var.cpp  new_delete.cpp  type_aggr_infer.cpp  type_aggr_init.cpp  type_aggr_return.cpp  type_aggr_union.cpp  type_dynamic_cast.cpp  type_pointer.cpp  type_pointer_lambda.cpp  type_pointer_nullness.cpp  type_pointer_unsafe.cpp  type_value_dtor.cpp
lib/: AstConsumer.cpp
lib/lifetime/: Debug.cpp  Lifetime.cpp  LifetimeAttrHandling.cpp  LifetimePsetBuilder.cpp  LifetimeTypeCategory.cpp
lib/lifetime/contract/: CallVisitor.cpp  Parser.cpp
lib/lifetime/type/: Aggregate.cpp
src/: asan.cpp  main.cpp
